<resources>
    <string name="app_name">STUDENT TOOL KIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="raspisanie">Расписание</string>
    <string name="prepods">Список преподавателей</string>
    <string name="utilits">Утилиты</string>
    <string name="ip">IP калькулятор</string>
    <string name="send">Send</string>
    <string name="title_activity_prepods">Prepods</string>
    <string name="chat">Ламповый чатик</string>
</resources>
